--- a/index.html
+++ b/index.html
@@ -319,39 +319,39 @@
     </div>
 </section>
 
-<!--Footer-->
+<!-- Footer -->
 <footer class="footer">
-    <div class="container footer-container" style="display: flex; align-items: baseline; margin-right: 120px;">
+    <div class="footer-container">
         <a href="./index.html" class="footer-logo">Web<span class="span">Studio</span></a>
-        <p class="footer-text" style="margin-bottom: 16px;">Increase the flow of customers and sales for your business
-            with digital marketing & growth solutions.</p>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </div>
     <div class="footer-social-contact">
         <p class="footer-list-title">Social media</p>
-        <ul class="footer-icon-list" style="display: flex; gap: 16px;">
-            <li class="footer-social-item">
-                <a class="footer-social-link social-media-link" href="https://www.instagram.com/" target="_blank">
+        <ul class="footer-list">
+            <li class="footer-links-item">
+                <a class="footer-social-link" href="https://www.instagram.com/" target="_blank">
                     <svg class="footer-media-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
-            <li class="footer-social-item">
-                <a class="footer-social-link social-media-link" href="https://twitter.com/" target="_blank">
+            <li class="footer-links-item">
+                <a class="footer-social-link" href="https://twitter.com/" target="_blank">
                     <svg class="footer-media-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
-            <li class="footer-social-item">
-                <a class="footer-social-link social-media-link" href="https://www.facebook.com/" target="_blank">
+            <li class="footer-links-item">
+                <a class="footer-social-link" href="https://www.facebook.com/" target="_blank">
                     <svg class="footer-media-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
-            <li class="footer-social-item">
-                <a class="footer-social-link social-media-link" href="https://ua.linkedin.com/" target="_blank">
+            <li class="footer-links-item">
+                <a class="footer-social-link" href="https://ua.linkedin.com/" target="_blank">
                     <svg class="footer-media-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -360,6 +360,7 @@
         </ul>
     </div>
 </footer>
+
 
 </body>
 </html>
