--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
     </header>
 
+
     <!--Section1 button-->
     <main class="main">
         <section class="hero">
@@ -60,7 +61,8 @@
                             </svg>
                         </div>
                         <h3 class="section-item-title">Strategy</h3>
-                        <p class="section-text">Our goal is to identify the business problem to walk away with the perfect and
+                        <p class="section-text">Our goal is to identify the business problem to walk away with the
+                            perfect and
                             creative solution.</p>
                     </li>
                     <li class="section-item">
@@ -70,7 +72,8 @@
                             </svg>
                         </div>
                         <h3 class="section-item-title">Punctuality</h3>
-                        <p class="section-text">Bring the key message to the brand's audience for the best price within the
+                        <p class="section-text">Bring the key message to the brand's audience for the best price within
+                            the
                             shortest possible time.</p>
                     </li>
                     <li class="section-item">
@@ -90,7 +93,8 @@
                             </svg>
                         </div>
                         <h3 class="section-item-title">Technologies</h3>
-                        <p class="section-text">Design practice focused on digital experiences. We bring forth a deep passion
+                        <p class="section-text">Design practice focused on digital experiences. We bring forth a deep
+                            passion
                             for problem-solving.</p>
                     </li>
                 </ul>
@@ -214,9 +218,9 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./images/keni.jpg" alt="Ken Harrison" width="264" height="260">
+                        <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
                         <div class="teams">
-                            <h3 class="team-subtitle">Ken Harrison</h3>
+                            <h3 class="team-subtitle">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
                             <ul class="soc-icon-list">
                                 <li class="soc-icon-team">
@@ -253,18 +257,136 @@
                 </ul>
             </div>
         </section>
-    </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <ul class="footer-list">
-                <li class="footer-item"><a class="footer-nav-link" href="./index.html">Studio</a></li>
-                <li class="footer-item"><a class="footer-nav-link" href="">Portfolio</a></li>
-                <li class="footer-item"><a class="footer-nav-link" href="">Contacts</a></li>
-            </ul>
-        </div>
-    </footer>
+
+        <!-- Section4 Portfolio -->
+        <section class="portfolio">
+            <div class="container">
+                <h2 class="portfolio-title">Our Portfolio</h2>
+                <ul class="portfolio-list">
+                    <li class="portfolio-item">
+                        <div class="portfolio-image-container">
+                            <img src="./images/banking.jpg" alt="banking app" width="360" height="300">
+                            <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Banking App</h3>
+                            <p class="portfolio-text">App</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <div class="portfolio-image-container">
+                            <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+                            <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <div class="portfolio-image-container">
+                            <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
+                            <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Meditation App</h3>
+                            <p class="portfolio-text">App</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <div class="portfolio-image-container">
+                            <img src="./images/service.jpg" alt="service" width="360" height="300">
+                            <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Taxi Service</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <div class="portfolio-image-container">
+                            <img src="./images/illustrations.jpg" alt="illustrations" width="360" height="300">
+                            <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                            <p class="portfolio-text">Design</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <div class="portfolio-image-container">
+                            <img src="./images/courses.jpg" alt="courses" width="360" height="300">
+                            <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Online Courses</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="footer-logo-text">
+                    <a href="./index.html" class="footer-logo">Web<span class="span">Studio</span></a>
+                    <p class="footer-text">Increase the flow of customers and sales for your business with digital
+                        marketing &
+                        growth solutions.</p>
+                </div>
+                <div class="footer-social-contact">
+                    <p class="footer-list-title">Social media</p>
+                    <ul class="footer-list">
+                        <li class="footer-links-item">
+                            <a class="footer-social-link" href="https://www.instagram.com/" target="_blank">
+                                <svg class="footer-media-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-links-item">
+                            <a class="footer-social-link" href="https://twitter.com/" target="_blank">
+                                <svg class="footer-media-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-links-item">
+                            <a class="footer-social-link" href="https://www.facebook.com/" target="_blank">
+                                <svg class="footer-media-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-links-item">
+                            <a class="footer-social-link" href="https://ua.linkedin.com/" target="_blank">
+                                <svg class="footer-media-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </footer>
+
 
 </body>
 
